Fix stat button on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -253,6 +253,7 @@ input, .stat-button
 
 .stat-button
 {
+    background-color: #EFEFEF;
     border-radius: 5px;
     height: 25px;
     box-shadow: inset 0 10px 10px -16px #000000;
